# WeensyOS

./: LICENSE  README.md
devenv/: Dockerfile  README.md
starter-code/: .gdbinit  AUTHORS  GNUmakefile  README-OS.md  log.txt
starter-code-rust/: Cargo.toml  GNUmakefile  Makefile  README.md  build.rs  rust-toolchain.toml  x86_64-weensyos.json
starter-code-rust/.cargo/: Config.toml  config.toml
starter-code-rust/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs  visual.rs
starter-code-rust/src/aux/: log.rs  mod.rs  serial.rs  vga_buffer.rs
starter-code-rust/src/kernel/: boot.rs  gdt.rs  interrupts.rs  kernel.rs  memory.rs  mod.rs
starter-code-rust/src/shared/: elf.rs  lib.rs  time.rs  x86_64.rs
starter-code-rust/src/task/: keyboard.rs  loader.rs  mod.rs
starter-code-rust/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
starter-code/kernel/c/: boot.c  bootstart.S  k-hardware.c  k-loader.c  kernel.c  kernel.h  vm.c
starter-code/kernel/rust/: Cargo.toml
starter-code/kernel/rust/src/: lib.rs
starter-code/kernel/rust/src/aux/: mod.rs  traits.rs
starter-code/kernel/rust/src/bindings/: bindings_elf.rs  bindings_kernel.rs  bindings_x86_64.rs  mod.rs
starter-code/kernel/rust/src/kernel/: kernel.rs  mod.rs  syscalls.rs
starter-code/kernel/rust/src/kloader/: kloader.rs  mod.rs
starter-code/kernel/rust/src/vm/: mod.rs  vm.rs
starter-code/link/: p-alloctests.ld
starter-code/shared/: lib.c  lib.h  time.h  x86-64.h
starter-code/tests/: p-alloc_check.c  p-brk-simple.c  p-brk-write.c  p-calloc.c  p-defrag.c  p-fork_basic.c  p-freespace.c  p-heapinfo.c  p-k_space_test.c  p-leak.c  p-malloc-alignment.c  p-malloc-simple.c  p-process_isolation.c  p-public-allocator.c  p-public-alloctests.c  p-public-malloc.c  p-realloc.c  p-sbrk-simple.c  p-sbrk-write.c  p-shared_mem.c  p-sys_page_alloc.c  p-virt_page_alloc.c  p-virt_stack.c
starter-code/tests/bck/: p-allocator.c  p-alloctests.c  p-malloc.c  p-test.c  process.h
starter-code/uspace/: aux.rs  malloc.h  malloc.rs  p-allocator.c  p-alloctests.c  p-fork.c  p-forkexit.c  p-malloc.c  p-test.c  process-linux.c  process-linux.h  process.c  process.h
