[package]
name = "weensyos"
version = "0.1.0"
edition = "2021"

[build-dependencies]
libc = "0.2.155"
cc = "1.0.79"

[dependencies]
x86_64 = "0.14.2"
libc = "0.2.155"
rlibc = "*"

# this means that Rust should generate
# statically linked library for further linking

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "mkbootdisk"
path = "src/build/mkbootdisk.rs"
